# mathcode

./: .env.example  .gitignore  README.ZH.md  README.md  run  setup.sh
AUTOLEAN/: README.md  pyproject.toml
AUTOLEAN/scripts/: check_lean_formalizations.py  compile_with_lsp.py  evaluate_lean_formalizations.py  evaluate_strict_aplus.py  generate_obsidian_vault.py  plot_proof_histograms.py  prove_lean_formalizations.py  prove_lean_formalizations_replan.py  revise_muri_slides.py  split_subproblems.py
AUTOLEAN/specs/: requirements.md
AUTOLEAN/specs/stdlib/: engineering_standards.md  security_privacy.md  testing_standards.md
AUTOLEAN/src/: .gitkeep
AUTOLEAN/src/autolean/: __init__.py  cli.py  core.py  lean_lsp.py  prompting.py  util.py
lean-workspace/: MathCodeLean.lean  lakefile.toml
plugins/: README.md
skills/: README.md
tests/: setup_flags_test.sh
tools/: _lean_masking.py  axiom_checker.py  lib_search.py  proof_stats.py  sorry_analyzer.py
